iac/sg.tf
resource "aws_security_group" "alb" {
  name        = "spectaclesxr-alb"
  description = "Allow web traffic to ALB"
  vpc_id      = aws_vpc.spectaclesxr.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs" {
  name        = "spectaclesxr-ecs"
  description = "Allow traffic to ECS from ALB only"
  vpc_id      = aws_vpc.spectaclesxr.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
